[#254] java.lang.Boolean constructor is deprecated
Replaced all occurences of ```Boolean(boolean)``` with
```valueOf(boolean)```

Signed-off-by: Vasily Fedorov <vasily.fedorov@arsysop.ru>