@@ -1,10 +1,10 @@
 /*******************************************************************************
  * Copyright (c) 2004, 2015 Tasktop Technologies and others.
- * 
+ *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
  * https://www.eclipse.org/legal/epl-2.0
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -49,7 +49,7 @@ public class TaskPropertyTester extends PropertyTester {
 	private static final String PROPERTY_IS_ARTIFACT = "isArtifact"; //$NON-NLS-1$
 
 	private boolean equals(boolean value, Object expectedValue) {
-		return new Boolean(value).equals(expectedValue);
+		return Boolean.valueOf(value).equals(expectedValue);
 	}
 
 	@SuppressWarnings("deprecation")
