@@ -1,10 +1,10 @@
 /*******************************************************************************
  * Copyright (c) 2004, 2012 Jingwen Ou and others.
- * 
+ *
  * This program and the accompanying materials are made available under the
  * terms of the Eclipse Public License v. 2.0 which is available at
  * https://www.eclipse.org/legal/epl-2.0
- * 
+ *
  * SPDX-License-Identifier: EPL-2.0
  *
  * Contributors:
@@ -32,7 +32,7 @@ public class TaskRepositoryPropertyTester extends PropertyTester {
 	private static final String PROPERTY_DISCONNECTED = "disconnected"; //$NON-NLS-1$
 
 	private boolean equals(boolean value, Object expectedValue) {
-		return new Boolean(value).equals(expectedValue);
+		return Boolean.valueOf(value).equals(expectedValue);
 	}
 
 	public boolean test(Object receiver, String property, Object[] args, Object expectedValue) {
